--- a/mydemo1/templates/mydemo1/addUserOr.html
+++ b/mydemo1/templates/mydemo1/addUserOr.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Add User{% endblock title %} {% block addUserOr %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
-</head>
+<div>
+    <h1>Add User</h1>
+    <form action="#" method="post">
+        {% csrf_token %} {% load static %}
+        <center>
+            <div class="container">
 
-<body>
+                <label for='user_id'><b>User ID : </b></label>
+                <input type='number' placeholder="Enter user id to add" name='user_id' required><br>
+                <button type="submit"><b>Add</b></button><br>
+            </div>
+        </center>
+    </form>
+</div>
 
-</body>
-
-</html>
+{%endblock addUserOr%}
