--- a/mydemo1/templates/mydemo1/myorganisation.html
+++ b/mydemo1/templates/mydemo1/myorganisation.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Organisations I'm Part of{% endblock title %} {% block myorganisation %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myorganisation</title>
-</head>
-
-<body>
+<div>
     <h1>Organisations im part of</h1>
     <table border="1">
         <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Admin ID</th>
+            <th>Actions</th>
         </tr>
         {%for i in or%}
         <tr>
@@ -27,9 +20,12 @@
             <td>
                 {{i.2}}
             </td>
+            <td>
+                <a href="{%url 'viewNotesOr' pk=i.0%}">View all Notes</a>
+                <a href="{%url 'uploadNotesOr' pk=i.0%}">Create New Note</a>
+            </td>
         </tr>
         {%endfor%}
     </table>
-</body>
-
-</html>
+</div>
+{%endblock myorganisation%}
