--- a/mydemo1/templates/mydemo1/addPhotosNo.html
+++ b/mydemo1/templates/mydemo1/addPhotosNo.html
@@ -1,17 +1,13 @@
-{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Create Note{% endblock title %} {% block uploadNotesOr %}
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Add Photos{% endblock title %} {% block addPhotoNo %}
 
 <div>
-    <h1>Create New Note</h1>
-
     <form action="#" method="post" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
-            <label for='note_name'><b>Title : </b></label>
-            <input type='text' placeholder="Enter note title" name='note_name' required><br><br>
             <label for="upload"> Your file:</label>
             <input type="file" name="upload" multiple="multiple"><br><br>
             <button type="submit"><b>Create</b></button><br>
         </div>
     </form>
 </div>
-{%endblock uploadNotesOr%}
+{%endblock addPhotoNo%}
