--- a/mydemo1/templates/mydemo1/error.html
+++ b/mydemo1/templates/mydemo1/error.html
@@ -1,20 +1,6 @@
-<html>
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Error Signing In !{% endblock title %} {% block error %}
 
-<head>
-    <title>Error page</title>
-    <style>
-        body {
-            color: red;
-            background-color: white;
-            font-size: 30px;
-        }
-    </style>
-</head>
-
-<body>
-    <center>
-        <h1>Invalid Entry(-_-)!</h1>
-    </center>
-</body>
-
-</html>
+<center>
+    <h1>Invalid Entry(-_-)!</h1>
+</center>
+{%endblock error%}
