--- a/mydemo1/templates/mydemo1/renameOr.html
+++ b/mydemo1/templates/mydemo1/renameOr.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Rename Organisation{% endblock title %} {% block renameOr %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rename Organisation</title>
-</head>
-
-<body>
-
-</body>
-
-</html>
+<div>
+    <h1>Rename Organisation : {{oldName}}</h1>
+    <form action="#" method="post">
+        {% csrf_token %}
+        <div class="container">
+            <label for='org_name'><b>New Title : </b></label>
+            <input type='text' placeholder="Enter Organisation title" name='org_name' required><br><br>
+            <button type="submit"><b>Rename</b></button><br>
+        </div>
+    </form>
+</div>
+{%endblock renameOr%}
