--- a/mydemo1/templates/mydemo1/signup.html
+++ b/mydemo1/templates/mydemo1/signup.html
@@ -1,69 +1,6 @@
-<html>
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Signup{% endblock title %} {% block signup %}
 
-<head>
-    <title>Signup Page</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: white;
-        }
-        
-        button {
-            background-color: #4CAF50;
-            width: 25%;
-            padding: 15px;
-            color: black;
-            border: none;
-            float: center;
-            font-size: 15px;
-        }
-        
-        label {
-            font-size: 20px;
-        }
-        
-        form {
-            border: 3px solid #f1f1f1;
-        }
-        
-        input[type=email],
-        input[type=text] {
-            width: 50%;
-            font-size: 15px;
-            margin: 8px 0px;
-            padding: 12px 20px;
-            display: inline-block;
-            border: 2px solid green;
-            box-sizing: border-box;
-        }
-        
-        input[type=radio] {
-            height: 18px;
-            width: 18px;
-        }
-        
-        button:hover {
-            opacity: 0.7;
-        }
-        
-        .container {
-            padding: 50px;
-            background-color: white;
-        }
-        
-        .imgcontainer {
-            text-align: center;
-            margin: 24px 0 12px 0;
-        }
-        
-        img.avatar {
-            width: 10%;
-            border-radius: 50%;
-        }
-    </style>
-</head>
-
-<body>
+<div>
     <center>
         <h1>Register From</h1>
     </center>
@@ -84,6 +21,5 @@
             </div>
         </center>
     </form>
-</body>
-
-</html>
+</div>
+{%endblock signup%}
