--- a/mydemo1/templates/mydemo1/visitNote.html
+++ b/mydemo1/templates/mydemo1/visitNote.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Visit Note{% endblock title %} {% block visitNote %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note</title>
-</head>
-
-<body>
+<div>
     <h1>Notes : {{images.0.8}} </h1>
     <h2>Organisation : {{images.0.5}}</h2>
     <center>
@@ -35,6 +27,5 @@
 
         </table>
     </center>
-</body>
-
-</html>
+</div>
+{%endblock visitNote%}
