--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -1,28 +1,14 @@
-<html>
+{% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Profile{% endblock title %} {% block profile_welcome %}
 
-<head>
-    <title>Welcome Page</title>
-    <style>
-        body {
-            background-color: black;
-            color: blue;
-            font-size: 30px;
-        }
-    </style>
-</head>
-
-<body>
+<div>
     <center>
-        <h1>Welcome :-)</h1>
-        {{fname}} {{lname}}
-
+        <h1>Welcome :-) {{fname}} {{lname}}
+        </h1>
     </center>
 
     <a href="http://localhost:8000/createorganisation">Create An Organisation</a><br>
-    <a href="http://localhost:8000/joinorganisation">Join An Organisation</a><br>
+    <!-- <a href="http://localhost:8000/joinorganisation">Join An Organisation</a><br> -->
     <a href="http://localhost:8000/madeorganisation">Organisations by Me</a><br>
     <a href="http://localhost:8000/myorganisation">Organisations I'm in</a><br>
-
-</body>
-
-</html>
+</div>
+{%endblock profile_welcome%}
