--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -1,12 +1,20 @@
-/* * {
-	border: 1px dashed black;
-} */
+* {
+    border: 0;
+    margin: 0;
+    text-decoration: none;
+}
+
+body {
+    background-color: aliceblue;
+}
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 1em;
+    padding: 1.5em;
+    padding-left: 3em;
+    border-bottom: 2px solid rgb(131, 131, 131);
 }
 
 .right {
@@ -14,4 +22,14 @@
     display: flex;
     justify-content: space-around;
     font-size: larger;
+}
+
+.nav .right a:hover {
+    border-bottom: 5px solid gold;
+    transition: 250ms;
+}
+
+.nav .right a {
+    font-weight: 750;
+    color: rgb(38, 0, 255);
 }
