--- a/mydemo1/templates/mydemo1/login.html
+++ b/mydemo1/templates/mydemo1/login.html
@@ -1,21 +1,19 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Login{% endblock title %} {% block login %}
 
-<div>
-    <center>
-        <h1>Login Form</h1>
-    </center>
-    <form action="#" method="post">
-        {% csrf_token %} {% load static %}
-        <center>
+<div class="outerlogin">
+    <h1>Log in</h1><br>
+    <div class="loginmain">
+        <form action="#" method="post">
+            {% csrf_token %} {% load static %}
             <div class="container">
 
-                <label for='email'><b>UserEmail :  </b></label>
                 <input type="email" placeholder="Enter email" name="email" float="right" required><br>
-                <label for='password'><b>Password : </b></label>
                 <input type="password" placeholder="Enter Password" name="password" required><br>
-                <button type="submit"><b>Login</b></button><br> Don't have accounct <a href="http://localhost:8000/signup/"> register </a>
+                <button type="submit"><b>Log in</b></button><br>
+
             </div>
-        </center>
-    </form>
+        </form>
+        <h3>Don't have accounct <a href="{%url 'signup' %}"> register </a></h3>
+    </div>
 </div>
 {%endblock login%}
