--- a/mydemo1/templates/mydemo1/signup.html
+++ b/mydemo1/templates/mydemo1/signup.html
@@ -1,25 +1,19 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Signup{% endblock title %} {% block signup %}
-
-<div>
-    <center>
-        <h1>Register From</h1>
-    </center>
-    <form action="#" method="post">
-        {% csrf_token %} {% load static %}
-        <center>
+<div class="outerregister">
+    <h1>Register From</h1><br>
+    <div class="registermain">
+        <form action="#" method="post">
+            {% csrf_token %} {% load static %}
             <div class="container">
 
-                <label for='first_name'><b>First Name : </b></label>
                 <input type='text' placeholder="Enter your first name" name='first_name' required><br>
-                <label for='last_name'><b>Last Name :</b></label>
                 <input type='text' placeholder='Enter your last name' name='last_name' required><br>
-                <label for='email'><b>Email Id :  </b></label>
                 <input type="email" placeholder="Enter email" name="email" float="right" required><br>
-                <label for='password'><b>Password : </b></label>
                 <input type="text" placeholder="Enter Password" name="password" required><br>
-                <button type="submit"><b>Signup</b></button><br> Already an accounct <a href="http://localhost:8000/login/"> Login </a>
+                <button type="submit"><b>Signup</b></button><br>
             </div>
-        </center>
-    </form>
+        </form>
+        <h3>Already an accounct <a href="{%url 'login' %}"> Login </a></h3>
+    </div>
 </div>
 {%endblock signup%}
