Made notes gallery

--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -1,11 +1,10 @@
 * {
-    border: 0;
     margin: 0;
     text-decoration: none;
 }
 
 body {
-    background-color: aliceblue;
+    background-color: rgb(230, 230, 230);
 }
 
 .nav {
