--- a/mydemo1/templates/mydemo1/myorganisation.html
+++ b/mydemo1/templates/mydemo1/myorganisation.html
@@ -22,6 +22,7 @@
                     Admin ID: {{i.2}}
                 </div>
                 <div class="options">
+                    <a href="{%url 'allUserOr' pk=i.0%}">View all Users</a>
                     <a href="{%url 'viewNotesOr' pk=i.0%}">View all Notes</a>
                     <a href="{%url 'uploadNotesOr' pk=i.0%}">Create New Note</a>
                 </div>
