--- a/mydemo1/templates/mydemo1/viewNotesOr.html
+++ b/mydemo1/templates/mydemo1/viewNotesOr.html
@@ -38,6 +38,8 @@
                 <a href="{%url 'visitNote' pk=i.0%}">Open</a>
                 <a href="{%url 'addUploaderOr' pk=i.0%}">Add Uploader</a>
                 <a href="{%url 'addPhotosNo' pk=i.0%}">Add Photos</a>
+                <a href="{%url 'deleteNote' pk=i.0%}">Delete Note</a>
+                <a href="{%url 'renameNo' pk=i.0%}">Rename Note</a>
             </div>
         </div>
         {%endfor%}
