--- a/mydemo1/templates/mydemo1/login.html
+++ b/mydemo1/templates/mydemo1/login.html
@@ -9,7 +9,7 @@
 
                 <input type="email" placeholder="Enter email" name="email" float="right" required><br>
                 <input type="password" placeholder="Enter Password" name="password" required><br>
-                <button type="submit"><b>Log in</b></button><br>
+                <center><button type="submit"><b>Log in</b></button></center>
 
             </div>
         </form>
