--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -6,7 +6,7 @@
     </h1>
     <div class="welcomemain">
 
-        <a href="http://localhost:8000/createorganisation">
+        <a href="{%url 'createorganisation' %}">
             <div class="logotext">
                 <div class="logoimg">
                     <img src="{%static 'mydemo1/images/create_org.png' %}" alt="">
@@ -15,7 +15,7 @@
                 <h2>Create An Organisation</h2><br>
             </div>
         </a>
-        <a href="http://localhost:8000/madeorganisation">
+        <a href="{%url 'madeorganisation' %}">
             <div class="logotext">
 
                 <div class="logoimg">
@@ -25,7 +25,7 @@
                 <h2>Organisations by Me</h2><br>
             </div>
         </a>
-        <a href="http://localhost:8000/myorganisation">
+        <a href="{%url 'myorganisation' %}">
             <div class="logotext">
 
                 <div class="logoimg">
